--- a/Our-Projects-1.css
+++ b/Our-Projects-1.css
@@ -1,6 +1,6 @@
  .u-section-1 {
   background-image: none;
-  min-height: 1109px;
+  min-height: 1123px;
 }
 
 .u-section-1 .u-image-1 {
@@ -8,9 +8,7 @@
   background-position: 31.19% 0%;
   filter: brightness(0.65);
   height: 768px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
+  margin: 0;
 }
 
 .u-section-1 .u-group-1 {
@@ -22,7 +20,7 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  margin: -701px auto 0;
+  margin: -701px 164px 0;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -62,12 +60,12 @@
 }
 
 .u-section-1 .u-list-item-1 {
-  background-image: none;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -76,20 +74,21 @@
 
 .u-section-1 .u-image-2 {
   height: 213px;
-  margin: 0 auto 0 0;
+  margin-top: 13px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 20px auto 0;
+  margin: 7px 23px 0;
 }
 
 .u-section-1 .u-list-item-2 {
-  background-image: none;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-3 {
@@ -98,20 +97,21 @@
 
 .u-section-1 .u-image-3 {
   height: 213px;
-  margin: 0 auto 0 0;
+  margin-top: 13px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 20px auto 0;
+  margin: 7px 23px 0;
 }
 
 .u-section-1 .u-list-item-3 {
-  background-image: none;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
+  background-image: none;
 }
 
 .u-section-1 .u-container-layout-4 {
@@ -120,11 +120,12 @@
 
 .u-section-1 .u-image-4 {
   height: 213px;
-  margin: 0 auto 0 0;
+  margin-top: 13px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 20px auto 0;
+  margin: 7px 23px 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -143,12 +144,21 @@
   padding: 0;
 }
 
+.u-section-1 .u-btn-2 {
+  border-bottom-style: solid;
+  font-style: italic;
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-image-1 {
+    margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-group-1 {
+    margin-left: 14px;
+    margin-right: 14px;
     height: auto;
   }
 
@@ -164,27 +174,26 @@
   }
 
   .u-section-1 .u-image-2 {
+    inset: auto;
     height: 169px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-3 {
+    inset: auto;
     height: 169px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
+    inset: auto;
     height: 169px;
-    margin-right: initial;
-    margin-left: initial;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-group-1 {
     width: 720px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-btn-1 {
@@ -203,20 +212,14 @@
 
   .u-section-1 .u-image-2 {
     height: 200px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-3 {
     height: 200px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
     height: 200px;
-    margin-right: initial;
-    margin-left: initial;
   }
 }
 
@@ -240,20 +243,14 @@
 
   .u-section-1 .u-image-2 {
     height: 347px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-3 {
     height: 347px;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
     height: 347px;
-    margin-right: initial;
-    margin-left: initial;
   }
 }
 
@@ -272,24 +269,18 @@
   }
 
   .u-section-1 .u-image-2 {
-    height: 231px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 214px;
   }
 
   .u-section-1 .u-image-3 {
-    height: 231px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 214px;
   }
 
   .u-section-1 .u-image-4 {
-    height: 231px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 214px;
   }
 } .u-section-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('/images/26193-min.jpg');
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('/images/_2.jpeg');
   background-position: 50% 50%;
 }
 
@@ -303,12 +294,11 @@
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 0.3;
-  margin: 60px auto 0;
+  margin: 71px auto 0;
 }
 
 .u-section-2 .u-list-1 {
-  margin-top: 44px;
-  margin-bottom: 0;
+  margin: 43px 0 60px;
 }
 
 .u-section-2 .u-repeater-1 {
@@ -346,11 +336,6 @@
   padding: 0;
 }
 
-.u-section-2 .u-btn-3 {
-  border-style: solid;
-  padding: 0;
-}
-
 .u-section-2 .u-list-item-2 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 300px;
@@ -370,17 +355,12 @@
   margin: 0;
 }
 
+.u-section-2 .u-btn-3 {
+  border-style: solid;
+  padding: 0;
+}
+
 .u-section-2 .u-btn-4 {
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-5 {
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-6 {
   border-style: solid;
   padding: 0;
 }
@@ -404,40 +384,24 @@
   margin: 0;
 }
 
-.u-section-2 .u-btn-7 {
+.u-section-2 .u-btn-5 {
   border-style: solid;
   padding: 0;
 }
 
-.u-section-2 .u-btn-8 {
+.u-section-2 .u-btn-6 {
   border-style: solid;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-9 {
-  border-style: solid;
-  padding: 0;
-}
-
-.u-section-2 .u-text-5 {
-  font-style: italic;
-  --animation-custom_in-translate_x: 300px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 30px auto 60px;
-}
-
-.u-section-2 .u-btn-10 {
-  border-bottom-style: solid;
-  font-style: italic;
   padding: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
     min-height: 438px;
+  }
+
+  .u-section-2 .u-list-1 {
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-repeater-1 {
@@ -502,20 +466,9 @@
   margin: 60px auto 0;
 }
 
-.u-section-3 .u-text-2 {
-  font-size: 1.125rem;
-  width: 839px;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 0.3;
-  margin: 37px auto 0;
-}
-
 .u-section-3 .u-gallery-1 {
   height: 1020px;
-  margin-top: 47px;
+  margin-top: 84px;
   margin-bottom: 0;
   grid-gap: 10px;
 }
@@ -570,7 +523,7 @@
   padding: 20px;
 }
 
-.u-section-3 .u-text-3 {
+.u-section-3 .u-text-2 {
   font-size: 1.125rem;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
@@ -578,6 +531,11 @@
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
   margin: 40px auto 60px;
+}
+
+.u-section-3 .u-btn-1 {
+  border-style: solid;
+  padding: 0;
 }
 
 .u-section-3 .u-btn-1 {
@@ -600,10 +558,6 @@
     min-height: 2022px;
   }
 
-  .u-section-3 .u-text-2 {
-    width: 720px;
-  }
-
   .u-section-3 .u-gallery-1 {
     height: 1626px;
   }
@@ -618,10 +572,6 @@
     min-height: 4819px;
   }
 
-  .u-section-3 .u-text-2 {
-    width: 540px;
-  }
-
   .u-section-3 .u-gallery-1 {
     height: 4423px;
   }
@@ -634,10 +584,6 @@
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
     min-height: 3210px;
-  }
-
-  .u-section-3 .u-text-2 {
-    width: 340px;
   }
 
   .u-section-3 .u-gallery-1 {
@@ -658,7 +604,7 @@
 
 .u-section-4 .u-image-1 {
   min-height: 658px;
-  background-image: url("/images/sss.jpg");
+  background-image: url("/images/Unittype5PairsCutResistantSleevesforArmWorkProtectionSafetyForearmSleeveGardeningSleevesArmProtectionSleeveProtectiveSleevesforArmsforGardenersFarmersWorkMenWomen5Colors.jpeg");
   background-position: 50% 50%;
 }
 
